# notion-graph

./: .env.demo.example  .env.example  .gitignore  Makefile  README.md  README_notion_graph_prd.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyrightconfig.json  turbo.json
.github/workflows/: ci-release.yml
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260308_0002_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py  metrics.py
apps/backend/app/db/: __init__.py  migrations.py  models.py  session.py
apps/backend/app/notion/: client.py  crawler.py  parser.py  webhook.py
apps/backend/app/schemas/: api.py  domain.py
apps/backend/app/services/: graph_query.py  runtime_config.py  scheduler.py  sync.py
apps/backend/tests/fixtures/: notion_fixture.json
apps/backend/tests/integration/: test_sync_and_query.py
apps/backend/tests/unit/: test_parser.py  test_webhook.py
apps/web/: Dockerfile  README.md  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/components/: DetailsPanel.tsx  GraphCanvas.tsx  SearchPanel.tsx
apps/web/lib/: api.ts  types.ts
scripts/: replay_notion_webhook.sh
