[project]
name = "notion-graph-backend"
version = "0.1.0"
description = "FastAPI backend for Notion native knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.116.0",
  "notion-client>=2.3.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes.py" = ["B008"]
"app/schemas/*.py" = ["N815"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
